# binify

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  main.rs  parser.rs
